update download card api
